# LensAgent

./: .dockerignore  .gitignore  Dockerfile  README.md  SESSION_NOTES.md  config.yaml  docker-compose.yml  experiment.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: mock_llm_server.py
examples/docker/: config.docker.yaml  config.ollama.yaml  config.standalone.yaml  job.py  sparkapp.yaml
examples/local/: config.local.yaml  job.py  sparkapp.yaml
examples/local/history/: local-app-001-stages.json
session_notes/: feature__add-local-llm.md  feature__kubernetes-runtime-fixes.md
src/agent_shell/: __init__.py  clients.py  config.py  factory.py  history.py  http.py  k8s_logs.py  llm_router.py  ollama.py  orchestrator.py  policy.py  prompts.py  runtime.py  spark_history.py  storage.py  types.py
tests/: test_config.py  test_llm_router.py  test_local_run.py  test_main.py  test_policy.py  test_runtime.py  test_standalone_integration.py  test_storage.py
