[project]
name = "spark-llm-agent-shell"
version = "0.1.0"
description = "Policy-driven shell around an LLM for Spark optimization workflows."
requires-python = ">=3.14"
dependencies = [
  "pyyaml",
  "python-dotenv",
]

[project.optional-dependencies]
kubernetes = [
  "kubernetes",
]
dev = [
  "ruff",
  "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
